--- a/privacy.html
+++ b/privacy.html
@@ -161,9 +161,9 @@
 
     <div class="container">
         <div class="lang-tabs">
-            <button class="lang-tab active" onclick="showLang('pl')">Polski</button>
-            <button class="lang-tab" onclick="showLang('en')">English</button>
-            <button class="lang-tab" onclick="showLang('de')">Deutsch</button>
+            <button class="lang-tab active" onclick="showLang('pl', this)">Polski</button>
+            <button class="lang-tab" onclick="showLang('en', this)">English</button>
+            <button class="lang-tab" onclick="showLang('de', this)">Deutsch</button>
         </div>
 
         <!-- POLISH VERSION -->
@@ -186,24 +186,44 @@
             <h2>3. Pliki cookies</h2>
             <p>Nasza strona <strong>nie używa plików cookies</strong>. Używamy jedynie localStorage przeglądarki do zapamiętania preferencji językowych.</p>
 
-            <h2>4. Usługi zewnętrzne</h2>
-            <p>Nasza strona nie korzysta z zewnętrznych usług analitycznych ani śledzących. Wszystkie zasoby (czcionki, ikony, grafiki) są hostowane lokalnie na naszym serwerze.</p>
+            <h2>4. Odbiorcy danych i usługi zewnętrzne</h2>
+            <p>Nasza strona nie korzysta z zewnętrznych usług analitycznych ani śledzących. Wszystkie zasoby (czcionki, ikony, grafiki) są hostowane lokalnie.</p>
+            <p>Jednak nasza strona jest hostowana na platformie <strong>GitHub Pages</strong> (należącej do Microsoft Corporation, USA). W związku z tym GitHub jako podmiot przetwarzający może automatycznie zbierać dane techniczne (adresy IP, dane przeglądarki) w ramach standardowych logów serwera.</p>
+            <p>Kategorie odbiorców danych:</p>
+            <ul>
+                <li><strong>GitHub Inc. / Microsoft Corporation</strong> — dostawca hostingu (podmiot przetwarzający). Polityka prywatności GitHub: <a href="https://docs.github.com/en/site-policy/privacy-policies/github-general-privacy-statement" target="_blank" rel="noopener">docs.github.com</a></li>
+            </ul>
 
-            <h2>5. Cele przetwarzania danych</h2>
+            <h2>5. Przekazywanie danych do państw trzecich</h2>
+            <p>W związku z korzystaniem z usługi hostingowej GitHub Pages (Microsoft Corporation), dane techniczne (adres IP, typ przeglądarki) mogą być przekazywane do <strong>Stanów Zjednoczonych</strong>.</p>
+            <p>Przekazywanie danych odbywa się na podstawie:</p>
+            <ul>
+                <li>EU-US Data Privacy Framework (DPF) — Microsoft jest certyfikowany w ramach DPF</li>
+                <li>Standardowe klauzule umowne (SCC) zatwierdzone przez Komisję Europejską</li>
+            </ul>
+
+            <h2>6. Cele przetwarzania danych</h2>
             <ul>
                 <li>Zapewnienie prawidłowego działania strony internetowej</li>
                 <li>Zapamiętanie preferencji językowych użytkownika</li>
                 <li>Odpowiadanie na zapytania kontaktowe</li>
             </ul>
 
-            <h2>6. Podstawa prawna</h2>
+            <h2>7. Podstawa prawna</h2>
             <p>Przetwarzanie danych odbywa się na podstawie:</p>
             <ul>
                 <li>Art. 6 ust. 1 lit. f RODO — prawnie uzasadniony interes administratora (prawidłowe działanie strony)</li>
                 <li>Art. 6 ust. 1 lit. a RODO — zgoda użytkownika (w przypadku kontaktu)</li>
             </ul>
 
-            <h2>7. Twoje prawa</h2>
+            <h2>8. Okres przechowywania danych</h2>
+            <ul>
+                <li><strong>Preferencje językowe (localStorage)</strong> — przechowywane lokalnie w przeglądarce użytkownika do momentu ręcznego usunięcia przez użytkownika. Nie są przesyłane na serwer.</li>
+                <li><strong>Logi serwera (GitHub Pages)</strong> — przechowywane zgodnie z polityką retencji GitHub, zazwyczaj nie dłużej niż 30 dni.</li>
+                <li><strong>Dane kontaktowe</strong> — w przypadku kontaktu mailowego lub telefonicznego, dane przechowywane są przez okres niezbędny do realizacji zapytania, a następnie przez okres wymagany przepisami prawa (do 6 lat w celach podatkowych i rachunkowych).</li>
+            </ul>
+
+            <h2>9. Twoje prawa</h2>
             <p>Zgodnie z RODO masz prawo do:</p>
             <ul>
                 <li>Dostępu do swoich danych osobowych</li>
@@ -215,7 +235,7 @@
                 <li>Wniesienia skargi do Prezesa Urzędu Ochrony Danych Osobowych (PUODO)</li>
             </ul>
 
-            <h2>8. Kontakt</h2>
+            <h2>10. Kontakt</h2>
             <p>W sprawach dotyczących ochrony danych osobowych prosimy o kontakt:</p>
             <p>Email: <a href="mailto:raido.logistics.pl@gmail.com">raido.logistics.pl@gmail.com</a><br>
             Telefon: <a href="tel:+48798173473">+48 798 173 473</a></p>
@@ -241,24 +261,44 @@
             <h2>3. Cookies</h2>
             <p>Our website <strong>does not use cookies</strong>. We only use browser localStorage to remember language preferences.</p>
 
-            <h2>4. Third-party services</h2>
-            <p>Our website does not use any external analytics or tracking services. All resources (fonts, icons, images) are hosted locally on our server.</p>
+            <h2>4. Data recipients and third-party services</h2>
+            <p>Our website does not use any external analytics or tracking services. All resources (fonts, icons, images) are hosted locally.</p>
+            <p>However, our website is hosted on <strong>GitHub Pages</strong> (owned by Microsoft Corporation, USA). As a data processor, GitHub may automatically collect technical data (IP addresses, browser data) as part of standard server logs.</p>
+            <p>Categories of data recipients:</p>
+            <ul>
+                <li><strong>GitHub Inc. / Microsoft Corporation</strong> — hosting provider (data processor). GitHub Privacy Policy: <a href="https://docs.github.com/en/site-policy/privacy-policies/github-general-privacy-statement" target="_blank" rel="noopener">docs.github.com</a></li>
+            </ul>
 
-            <h2>5. Purposes of data processing</h2>
+            <h2>5. International data transfers</h2>
+            <p>Due to the use of GitHub Pages hosting service (Microsoft Corporation), technical data (IP address, browser type) may be transferred to the <strong>United States</strong>.</p>
+            <p>Data transfers are based on:</p>
+            <ul>
+                <li>EU-US Data Privacy Framework (DPF) — Microsoft is certified under the DPF</li>
+                <li>Standard Contractual Clauses (SCCs) approved by the European Commission</li>
+            </ul>
+
+            <h2>6. Purposes of data processing</h2>
             <ul>
                 <li>Ensuring proper operation of the website</li>
                 <li>Remembering user language preferences</li>
                 <li>Responding to contact inquiries</li>
             </ul>
 
-            <h2>6. Legal basis</h2>
+            <h2>7. Legal basis</h2>
             <p>Data processing is based on:</p>
             <ul>
                 <li>Art. 6(1)(f) GDPR — legitimate interest of the controller (proper website operation)</li>
                 <li>Art. 6(1)(a) GDPR — user consent (in case of contact)</li>
             </ul>
 
-            <h2>7. Your rights</h2>
+            <h2>8. Data retention periods</h2>
+            <ul>
+                <li><strong>Language preferences (localStorage)</strong> — stored locally in the user's browser until manually deleted by the user. Not transmitted to any server.</li>
+                <li><strong>Server logs (GitHub Pages)</strong> — retained according to GitHub's retention policy, typically no longer than 30 days.</li>
+                <li><strong>Contact data</strong> — in the case of email or phone contact, data is retained for the period necessary to handle the inquiry, and subsequently for the period required by law (up to 6 years for tax and accounting purposes).</li>
+            </ul>
+
+            <h2>9. Your rights</h2>
             <p>Under GDPR, you have the right to:</p>
             <ul>
                 <li>Access your personal data</li>
@@ -270,7 +310,7 @@
                 <li>Lodge a complaint with the supervisory authority (PUODO in Poland)</li>
             </ul>
 
-            <h2>8. Contact</h2>
+            <h2>10. Contact</h2>
             <p>For data protection inquiries, please contact us:</p>
             <p>Email: <a href="mailto:raido.logistics.pl@gmail.com">raido.logistics.pl@gmail.com</a><br>
             Phone: <a href="tel:+48798173473">+48 798 173 473</a></p>
@@ -296,24 +336,44 @@
             <h2>3. Cookies</h2>
             <p>Unsere Website <strong>verwendet keine Cookies</strong>. Wir verwenden lediglich den localStorage des Browsers, um Spracheinstellungen zu speichern.</p>
 
-            <h2>4. Externe Dienste</h2>
-            <p>Unsere Website verwendet keine externen Analyse- oder Tracking-Dienste. Alle Ressourcen (Schriftarten, Symbole, Bilder) werden lokal auf unserem Server gehostet.</p>
+            <h2>4. Datenempfänger und externe Dienste</h2>
+            <p>Unsere Website verwendet keine externen Analyse- oder Tracking-Dienste. Alle Ressourcen (Schriftarten, Symbole, Bilder) werden lokal gehostet.</p>
+            <p>Unsere Website wird jedoch auf <strong>GitHub Pages</strong> (im Besitz der Microsoft Corporation, USA) gehostet. Als Auftragsverarbeiter kann GitHub automatisch technische Daten (IP-Adressen, Browserdaten) im Rahmen der Standard-Serverprotokolle erfassen.</p>
+            <p>Kategorien von Datenempfängern:</p>
+            <ul>
+                <li><strong>GitHub Inc. / Microsoft Corporation</strong> — Hosting-Anbieter (Auftragsverarbeiter). GitHub-Datenschutzrichtlinie: <a href="https://docs.github.com/en/site-policy/privacy-policies/github-general-privacy-statement" target="_blank" rel="noopener">docs.github.com</a></li>
+            </ul>
 
-            <h2>5. Zwecke der Datenverarbeitung</h2>
+            <h2>5. Internationale Datenübermittlung</h2>
+            <p>Aufgrund der Nutzung des Hosting-Dienstes GitHub Pages (Microsoft Corporation) können technische Daten (IP-Adresse, Browsertyp) in die <strong>Vereinigten Staaten</strong> übertragen werden.</p>
+            <p>Die Datenübermittlung erfolgt auf Grundlage von:</p>
+            <ul>
+                <li>EU-US Data Privacy Framework (DPF) — Microsoft ist unter dem DPF zertifiziert</li>
+                <li>Standardvertragsklauseln (SCCs), die von der Europäischen Kommission genehmigt wurden</li>
+            </ul>
+
+            <h2>6. Zwecke der Datenverarbeitung</h2>
             <ul>
                 <li>Gewährleistung des ordnungsgemäßen Betriebs der Website</li>
                 <li>Speicherung der Spracheinstellungen des Benutzers</li>
                 <li>Beantwortung von Kontaktanfragen</li>
             </ul>
 
-            <h2>6. Rechtsgrundlage</h2>
+            <h2>7. Rechtsgrundlage</h2>
             <p>Die Datenverarbeitung erfolgt auf Grundlage von:</p>
             <ul>
                 <li>Art. 6 Abs. 1 lit. f DSGVO — berechtigtes Interesse des Verantwortlichen (ordnungsgemäßer Betrieb der Website)</li>
                 <li>Art. 6 Abs. 1 lit. a DSGVO — Einwilligung des Nutzers (bei Kontaktaufnahme)</li>
             </ul>
 
-            <h2>7. Ihre Rechte</h2>
+            <h2>8. Speicherdauer</h2>
+            <ul>
+                <li><strong>Spracheinstellungen (localStorage)</strong> — lokal im Browser des Nutzers gespeichert, bis sie manuell vom Nutzer gelöscht werden. Werden nicht an einen Server übertragen.</li>
+                <li><strong>Server-Protokolle (GitHub Pages)</strong> — werden gemäß den Aufbewahrungsrichtlinien von GitHub gespeichert, in der Regel nicht länger als 30 Tage.</li>
+                <li><strong>Kontaktdaten</strong> — bei E-Mail- oder Telefonkontakt werden die Daten für den zur Bearbeitung der Anfrage erforderlichen Zeitraum und anschließend für den gesetzlich vorgeschriebenen Zeitraum aufbewahrt (bis zu 6 Jahre für steuerliche und buchhalterische Zwecke).</li>
+            </ul>
+
+            <h2>9. Ihre Rechte</h2>
             <p>Gemäß DSGVO haben Sie das Recht auf:</p>
             <ul>
                 <li>Auskunft über Ihre personenbezogenen Daten</li>
@@ -325,7 +385,7 @@
                 <li>Beschwerde bei der Aufsichtsbehörde (PUODO in Polen)</li>
             </ul>
 
-            <h2>8. Impressum</h2>
+            <h2 id="impressum">10. Kontakt &amp; Impressum</h2>
             <p><strong>RAIDO Logistics Sp. z O.O.</strong><br>
             74B, Podole 05-600<br>
             Kreis Grójec, Woiwodschaft Masowien, Polen</p>
@@ -333,17 +393,19 @@
             KRS: 0001090073<br>
             NIP: 7972086263<br>
             REGON: 527873817</p>
+            <!-- WICHTIG: Gemäß TMG §5 muss hier der Vertretungsberechtigte (Geschäftsführer) namentlich genannt werden -->
+            <!-- Beispiel: <p>Geschäftsführer: [Vor- und Nachname]</p> -->
             <p>Email: <a href="mailto:raido.logistics.pl@gmail.com">raido.logistics.pl@gmail.com</a><br>
             Telefon: <a href="tel:+48798173473">+48 798 173 473</a></p>
         </div>
     </div>
 
     <script>
-        function showLang(lang) {
+        function showLang(lang, btn) {
             document.querySelectorAll('.lang-content').forEach(el => el.classList.remove('active'));
             document.querySelectorAll('.lang-tab').forEach(el => el.classList.remove('active'));
             document.getElementById('lang-' + lang).classList.add('active');
-            event.target.classList.add('active');
+            btn.classList.add('active');
             document.documentElement.lang = lang;
         }
     </script>
