Update privacy policy to include the name of the Geschäftsführer

--- a/privacy.html
+++ b/privacy.html
@@ -393,8 +393,7 @@
             KRS: 0001090073<br>
             NIP: 7972086263<br>
             REGON: 527873817</p>
-            <!-- WICHTIG: Gemäß TMG §5 muss hier der Vertretungsberechtigte (Geschäftsführer) namentlich genannt werden -->
-            <!-- Beispiel: <p>Geschäftsführer: [Vor- und Nachname]</p> -->
+            <p>Geschäftsführer: Natalia Filipchik</p>
             <p>Email: <a href="mailto:raido.logistics.pl@gmail.com">raido.logistics.pl@gmail.com</a><br>
             Telefon: <a href="tel:+48798173473">+48 798 173 473</a></p>
         </div>
