Refactor language tab buttons in privacy.html to use data attributes and improve default language handling on page load.

--- a/privacy.html
+++ b/privacy.html
@@ -161,9 +161,9 @@
 
     <div class="container">
         <div class="lang-tabs">
-            <button class="lang-tab active" onclick="showLang('pl', this)">Polski</button>
-            <button class="lang-tab" onclick="showLang('en', this)">English</button>
-            <button class="lang-tab" onclick="showLang('de', this)">Deutsch</button>
+            <button class="lang-tab active" data-lang="pl" onclick="showLang('pl', this)">Polski</button>
+            <button class="lang-tab" data-lang="en" onclick="showLang('en', this)">English</button>
+            <button class="lang-tab" data-lang="de" onclick="showLang('de', this)">Deutsch</button>
         </div>
 
         <!-- POLISH VERSION -->
@@ -404,9 +404,23 @@
             document.querySelectorAll('.lang-content').forEach(el => el.classList.remove('active'));
             document.querySelectorAll('.lang-tab').forEach(el => el.classList.remove('active'));
             document.getElementById('lang-' + lang).classList.add('active');
-            btn.classList.add('active');
+            if (btn) {
+                btn.classList.add('active');
+            }
             document.documentElement.lang = lang;
         }
+
+        // Default language: PL, but if opened with #impressum -> DE
+        document.addEventListener('DOMContentLoaded', function () {
+            var defaultLang = 'pl';
+            if (window.location.hash === '#impressum') {
+                defaultLang = 'de';
+            }
+            var btn = document.querySelector('.lang-tab[data-lang=\"' + defaultLang + '\"]');
+            if (btn) {
+                showLang(defaultLang, btn);
+            }
+        });
     </script>
 </body>
 </html>
